; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_dimension_slice.c_ts_dimension_slice_delete_by_id.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_dimension_slice.c_ts_dimension_slice_delete_by_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@Anum_dimension_slice_id_idx_id = common dso_local global i32 0, align 4
@BTEqualStrategyNumber = common dso_local global i32 0, align 4
@F_INT4EQ = common dso_local global i32 0, align 4
@DIMENSION_SLICE_ID_IDX = common dso_local global i32 0, align 4
@dimension_slice_tuple_delete = common dso_local global i32 0, align 4
@RowExclusiveLock = common dso_local global i32 0, align 4
@CurrentMemoryContext = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ts_dimension_slice_delete_by_id(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [1 x i32], align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %7 = load i32, i32* @Anum_dimension_slice_id_idx_id, align 4
  %8 = load i32, i32* @BTEqualStrategyNumber, align 4
  %9 = load i32, i32* @F_INT4EQ, align 4
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @Int32GetDatum(i32 %10)
  %12 = call i32 @ScanKeyInit(i32* %6, i32 %7, i32 %8, i32 %9, i32 %11)
  %13 = load i32, i32* @DIMENSION_SLICE_ID_IDX, align 4
  %14 = getelementptr inbounds [1 x i32], [1 x i32]* %5, i64 0, i64 0
  %15 = load i32, i32* @dimension_slice_tuple_delete, align 4
  %16 = load i32, i32* @RowExclusiveLock, align 4
  %17 = load i32, i32* @CurrentMemoryContext, align 4
  %18 = call i32 @dimension_slice_scan_limit_internal(i32 %13, i32* %14, i32 1, i32 %15, i32* %4, i32 1, i32 %16, i32 %17)
  ret i32 %18
}

declare dso_local i32 @ScanKeyInit(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @Int32GetDatum(i32) #1

declare dso_local i32 @dimension_slice_scan_limit_internal(i32, i32*, i32, i32, i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
